
AUTOMAKE_OPTIONS = subdir-objects

AM_CFLAGS = -I../ -I ../src  -I../src/inc
LDADD = ../src/libglme.la

PROGS = \
	t01 t02 t03 t04 t05 t06 t07 t08 t09 t10 \
	t11 t12 t13 t14 t15 t16 t17 t18 t19 t20 \
	t21 t22


t01_SOURCES = t01.c
t02_SOURCES = t02.c
t03_SOURCES = t03.c
t04_SOURCES = t04.c
t05_SOURCES = t05.c
t06_SOURCES = t06.c
t07_SOURCES = t07.c
t08_SOURCES = t08.c
t09_SOURCES = t09.c
t10_SOURCES = t10.c
t11_SOURCES = t11.c
t12_SOURCES = t12.c
t13_SOURCES = t13.c
t14_SOURCES = t14.c
t15_SOURCES = t15.c
t16_SOURCES = t16.c
t17_SOURCES = t17.c
t18_SOURCES = t18.c
t19_SOURCES = t19.c
t20_SOURCES = t20.c
t21_SOURCES = t21.c
t22_SOURCES = t22.c

check_PROGRAMS = $(PROGS)

TESTS = $(check_PROGRAMS)



